--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,11 +1,11 @@
 ---
-- id: 232
-  date: 2016-12-10 23:00
+- id: 233
+  date: 2016-12-17 23:00
   author:
-    name: llh911001
-    url: https://github.com/llh911001
+    name: wtsnjp
+    url: https://github.com/wtsnjp
   vimrcs:
-  - url: https://github.com/llh911001/vimrc/blob/master/.vimrc
+  - url: https://github.com/wtsnjp/dotfiles/blob/master/home/.vimrc
     name: ".vimrc"
     hash: 
   part: 
