--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,11 +1,11 @@
 ---
-- id: 233
-  date: 2016-12-17 23:00
+- id: 234
+  date: 2016-12-24 23:00
   author:
-    name: wtsnjp
-    url: https://github.com/wtsnjp
+    name: kan
+    url: https://github.com/kan
   vimrcs:
-  - url: https://github.com/wtsnjp/dotfiles/blob/master/home/.vimrc
+  - url: https://github.com/kan/dotfiles/blob/master/vim/.vimrc
     name: ".vimrc"
     hash: 
   part: 
