--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 236
-  date: 2017-01-07 23:00
+- id: 237
+  date: 2017-01-14 23:00
   author:
     name: anekos
     url: https://github.com/anekos
   vimrcs:
   - url: https://github.com/anekos/my-config/blob/master/.vim/cat.vim
     name: "cat.vim"
-    hash: 
-  part: 前編
+    hash: cf7e64c4c384ee4ae341907ded4e1a3b1fd9baa3
+  part: 中編
   other: 
