--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,12 +1,12 @@
 ---
-- id: 239
-  date: 2017-01-28 23:00
+- id: 240
+  date: 2017-02-04 23:00
   author:
-    name: suzuken
-    url: https://github.com/suzuken
+    name: valerybugakov
+    url: https://github.com/valerybugakov
   vimrcs:
-  - url: https://github.com/suzuken/dotfiles/blob/master/vimrc
-    name: vimrc
+  - url: https://github.com/valerybugakov/dotfiles/blob/master/dots/.vimrc
+    name: ".vimrc"
     hash: 
   part: 
   other: 
