--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,14 +1,14 @@
-- id: 248
-  date: '2017-4-1 23:00'
+- id: 249
+  date: '2017-4-8 23:00'
   author:
     name: ayapi
     url: 'https://github.com/ayapi'
   vimrcs:
     - url: 'https://github.com/ayapi/dotfiles/blob/master/.vimrc'
       name: .vimrc
-      hash: null
+      hash: 4d7c187b7d62f43d7ed4458927bc0f59a5cded61
     - url: 'https://github.com/ayapi/dotfiles/blob/master/.gvimrc'
       name: .gvimrc
-      hash: null
-  part: 前編
+      hash: 4d7c187b7d62f43d7ed4458927bc0f59a5cded61
+  part: 後編
   other: null
