Add missed members for #334

--- a/_data/archives.yml
+++ b/_data/archives.yml
@@ -9226,7 +9226,10 @@
   other: null
   members:
     - callmekohei
+    - gollira108_twitter
     - mattn
+    - okuramasafumi
+    - rbtnn
     - thinca
     - ujihisa
     - yysaki
