Mark next as 前編

--- a/_data/next.yml
+++ b/_data/next.yml
@@ -116,5 +116,5 @@
         https://github.com/tjdevries/config_manager/tree/master/xdg_config/nvim/plugin/keymaps.vim
       hash: null
       name: keymaps.vim
-  part: null
+  part: 前編
   other: null
