Mark #453 as 前編

--- a/_data/archives.yml
+++ b/_data/archives.yml
@@ -13132,7 +13132,7 @@
       url: 'https://github.com/tsuyoshicho/vimrc-reading/blob/7451171f07e88d6d1dcd73deb792aff115d2c94e/.vim/rc/vim_lazy.toml'
       raw_url: 'https://raw.githubusercontent.com/tsuyoshicho/vimrc-reading/7451171f07e88d6d1dcd73deb792aff115d2c94e/.vim/rc/vim_lazy.toml'
       hash: 7451171f07e88d6d1dcd73deb792aff115d2c94e
-  part: null
+  part: 前編
   other: null
   members:
     - KosukeMizuno
