--- a/_data/next.yml
+++ b/_data/next.yml
@@ -1,14 +1,224 @@
-- id: 476
-  date: 2021-08-14 23:00
+- id: 477
+  date: 2021-08-21 23:00
   author:
-    name: cocopon
-    url: https://github.com/cocopon
+    name: ik5
+    url: https://github.com/ik5
   vimrcs:
-    - url: https://github.com/cocopon/dotfiles/blob/main/.vimrc
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc
       hash: null
-      name: .vimrc
-    - url: https://github.com/cocopon/dotfiles/blob/main/.gvimrc
+      name: vimrc
+    - url: https://github.com/ik5/dotvim/blob/master/init.vim
       hash: null
-      name: .gvimrc
-  part: null
+      name: init.vim
+    - url: https://github.com/ik5/dotvim/blob/master/pre_configrc.d/000-mkdir.vim
+      hash: null
+      name: 000-mkdir.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/000-plugins.vim
+      hash: null
+      name: 000-plugins.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/001-commands.vim
+      hash: null
+      name: 001-commands.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/001-functions.vim
+      hash: null
+      name: 001-functions.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/001-settings.vim
+      hash: null
+      name: 001-settings.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/002-colorscheme.vim
+      hash: null
+      name: 002-colorscheme.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/003-keymap-general.vim
+      hash: null
+      name: 003-keymap-general.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/003-keymap-rtl.vim
+      hash: null
+      name: 003-keymap-rtl.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/005-terminal.vim
+      hash: null
+      name: 005-terminal.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-airline.vim
+      hash: null
+      name: 020-airline.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-ale.vim
+      hash: null
+      name: 020-ale.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-bufexplorer.vim
+      hash: null
+      name: 020-bufexplorer.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-clever-f.vim
+      hash: null
+      name: 020-clever-f.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-coc.vim
+      hash: null
+      name: 020-coc.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-ctrlfs.vim
+      hash: null
+      name: 020-ctrlfs.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-denite.vim
+      hash: null
+      name: 020-denite.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-deoplete.vim
+      hash: null
+      name: 020-deoplete.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-echodoc.vim
+      hash: null
+      name: 020-echodoc.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-elm-vim.vim
+      hash: null
+      name: 020-elm-vim.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-emmet.vim
+      hash: null
+      name: 020-emmet.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-far.vim
+      hash: null
+      name: 020-far.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-fugitive.vim
+      hash: null
+      name: 020-fugitive.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-gitgutter.vim
+      hash: null
+      name: 020-gitgutter.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-gitv.vim
+      hash: null
+      name: 020-gitv.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-html5.vim
+      hash: null
+      name: 020-html5.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-indentline.vim
+      hash: null
+      name: 020-indentline.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-jedi-vim.vim
+      hash: null
+      name: 020-jedi-vim.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-language-client-neovim.vim
+      hash: null
+      name: 020-language-client-neovim.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-matchup.vim
+      hash: null
+      name: 020-matchup.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-mucomplete.vim
+      hash: null
+      name: 020-mucomplete.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-neoformat.vim
+      hash: null
+      name: 020-neoformat.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-nerdcommander.vim
+      hash: null
+      name: 020-nerdcommander.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-nerdtree.vim
+      hash: null
+      name: 020-nerdtree.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-netrw.vim
+      hash: null
+      name: 020-netrw.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-pgsql.vim
+      hash: null
+      name: 020-pgsql.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-polyglot.vim
+      hash: null
+      name: 020-polyglot.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-python-mode.vim
+      hash: null
+      name: 020-python-mode.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-ripgrep.vim
+      hash: null
+      name: 020-ripgrep.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-ruby.vim
+      hash: null
+      name: 020-ruby.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-rust.vim
+      hash: null
+      name: 020-rust.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-snipmate.vim
+      hash: null
+      name: 020-snipmate.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-splitjoin.vim
+      hash: null
+      name: 020-splitjoin.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-supertab.vim
+      hash: null
+      name: 020-supertab.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-tabular.vim
+      hash: null
+      name: 020-tabular.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-tagbar.vim
+      hash: null
+      name: 020-tagbar.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-tasklist.vim
+      hash: null
+      name: 020-tasklist.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-tcomment.vim
+      hash: null
+      name: 020-tcomment.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-tmux-complete.vim
+      hash: null
+      name: 020-tmux-complete.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-turn-for-vim.vim
+      hash: null
+      name: 020-turn-for-vim.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-ultisnips.vim
+      hash: null
+      name: 020-ultisnips.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-undotree.vim
+      hash: null
+      name: 020-undotree.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-viewdoc.vim
+      hash: null
+      name: 020-viewdoc.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-vim-conflicted.vim
+      hash: null
+      name: 020-vim-conflicted.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-vim-fixmyjs.vim
+      hash: null
+      name: 020-vim-fixmyjs.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-vim-gitgutter.vim
+      hash: null
+      name: 020-vim-gitgutter.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-vim-go.vim
+      hash: null
+      name: 020-vim-go.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-vim-grammarous.vim
+      hash: null
+      name: 020-vim-grammarous.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-vim-highlightedyank.vim
+      hash: null
+      name: 020-vim-highlightedyank.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-vim-javascript.vim
+      hash: null
+      name: 020-vim-javascript.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-vim-jsx.vim
+      hash: null
+      name: 020-vim-jsx.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-vim-markdown.vim
+      hash: null
+      name: 020-vim-markdown.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-vim-tagged-template.vim
+      hash: null
+      name: 020-vim-tagged-template.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-vim-tshark.vim
+      hash: null
+      name: 020-vim-tshark.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-vim-twiggy.vim
+      hash: null
+      name: 020-vim-twiggy.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-vim-vue.vim
+      hash: null
+      name: 020-vim-vue.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/020-webdevicons.vim
+      hash: null
+      name: 020-webdevicons.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/030-omnicomplete.vim
+      hash: null
+      name: 030-omnicomplete.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/031-filetypes.vim
+      hash: null
+      name: 031-filetypes.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/032-folding.vim
+      hash: null
+      name: 032-folding.vim
+    - url: https://github.com/ik5/dotvim/blob/master/vimrc.d/999-finish.vim
+      hash: null
+      name: 999-finish.vim
+  part: 前編
   other: null
