Mark #398 as 前編

--- a/_data/archives.yml
+++ b/_data/archives.yml
@@ -17682,7 +17682,7 @@
       url: https://github.com/tsuyoshicho/vimrc-reading/blob/4037e59bdfaad9063c859e5fe724579623ef7836/.vim/after/syntax/markdown.vim
       raw_url: https://raw.githubusercontent.com/tsuyoshicho/vimrc-reading/4037e59bdfaad9063c859e5fe724579623ef7836/.vim/after/syntax/markdown.vim
       hash: 4037e59bdfaad9063c859e5fe724579623ef7836
-  part: null
+  part: 前編
   other: null
   members:
     - 4513ECHO
