Mark #388 as 前編

--- a/_data/archives.yml
+++ b/_data/archives.yml
@@ -16617,7 +16617,7 @@
       url: https://github.com/lighttiger2505/.dotfiles/blob/6229fdc35c6ddc42a3b2dafab4e1bd83e233a218/.vim/rc/dein_vim_lsp.toml
       raw_url: https://raw.githubusercontent.com/lighttiger2505/.dotfiles/6229fdc35c6ddc42a3b2dafab4e1bd83e233a218/.vim/rc/dein_vim_lsp.toml
       hash: 6229fdc35c6ddc42a3b2dafab4e1bd83e233a218
-  part: null
+  part: 前編
   other: null
   members:
     - kuuote
