Fix members of 501

--- a/_data/archives.yml
+++ b/_data/archives.yml
@@ -17865,5 +17865,7 @@
   members:
     - 4513ECHO
     - kuuote
+    - rbtnn
     - thinca
+    - xuanduc987
   log: https://gitter.im/vim-jp/reading-vimrc?at=61fe8a2ea41d896a207e9377
