--- a/_data/archives.yml
+++ b/_data/archives.yml
@@ -18811,6 +18811,7 @@
     - 4513ECHO
     - atusy
     - kuuote
+    - rbtnn
     - thinca
     - tsuyoshicho
   log: https://gitter.im/vim-jp/reading-vimrc?at=626d46e589dcc96e9cddb345
