Fix part of #557

--- a/_data/archives.yml
+++ b/_data/archives.yml
@@ -22566,7 +22566,7 @@
       url: https://github.com/ompugao/vim-bundle/blob/14417ef1b9d141d145138f70da71166b666d940c/gvimrc
       raw_url: https://raw.githubusercontent.com/ompugao/vim-bundle/14417ef1b9d141d145138f70da71166b666d940c/gvimrc
       hash: 14417ef1b9d141d145138f70da71166b666d940c
-  part: null
+  part: 前編
   other: null
   members:
     - Liquid-system (Liquid_system)
